<resources>
    <string name="app_name">MAD Meditation</string>

    <string name="onboardingWelcomeTextHeader">Привет</string>
    <string name="onboardingWelcomeTextBody">Наслаждайся отборочными. \n Будь внимателен. \n Делай хорошо.</string>
    <string name="onboardingLoginAccount">Войти в аккаунт</string>
    <string name="onboardingNoAccountHint">Еще нет аккаунта?</string>
    <string name="onboardingNoAccountHintRegistration">Зарегистрируйтесь</string>

    <string name="loginTextHeader">Sign In</string>
    <string name="loginEmailHint">Email</string>
    <string name="loginPasswordHint">Пароль</string>
    <string name="loginAccountLogin">Sign in</string>
    <string name="loginAccountRegister">Зарегистрироваться</string>

    <string name="registerTextHeader">Sign Up</string>
    <string name="registerEmailHint">Email</string>
    <string name="registerPasswordHint">Пароль</string>
    <string name="registerRepeatPasswordHint">Повторите пароль</string>
    <string name="registerAccountRegister">Sign up</string>
    <string name="registerAccountNotRegister">У меня уже есть аккаунт</string>

    <string name="mainWelcomeText">С возвращением, User!</string>
    <string name="mainAfterWelcomeText">Каким ты себя ощущаешь сегодня?</string>

    <string name="profileExitText">exit</string>
    <string name="profileUserText">User</string>

    <string name="galleryDeleteText">удалить</string>
    <string name="galleryCloseText">закрыть</string>

    <string name="listenTextMock">Тут будет \nпрослушивание</string>
    <string name="menuTextMock">Тут будет меню</string>

    <string name="alertDialogLoginFailedTitle">Ошибка входа</string>
    <string name="alertDialogDataIncorrectMessage">Поле email или парль не заполнено. Проверьте заполненность</string>
    <string name="alertDialogLoginFailedMessage">Введенные данные некорректны. Проверьте правильность</string>
    <string name="networkErrorMessage">Ошибка сети. Попробуйте еще раз</string>
    <string name="imageLoadingErrorMessage">Ошибка загрузки картинки</string>
    <string name="noInternalStorageAccess">Отсутствует доступ ко внутренней памяти</string>

</resources>